Use strRoomId instead of roomId(interger type), and print received SEI message out

--- a/quick-demo-js/index.html
+++ b/quick-demo-js/index.html
@@ -210,7 +210,7 @@
           </div>
           <div class='input-group input-group-sm mb-3'>
             <span class='input-group-text'>RoomId</span>
-            <input id='roomId' type='number' min='1' max='4294967294' class='form-control' placeholder='roomId'>
+            <input id='roomId' class='form-control' placeholder='roomId'>
           </div>
         </div>
         <div class="alert alert-danger" role="alert">
